syntax = "proto3";
option go_package = "github.com/TrustedPay/tp-term/pkg/term";
import "common.proto";

message PaymentRequestReply {
  string payment_id = 1;
  TransactionStatus status = 2;
}

service TPTerm {
  rpc PaymentRequest(Transaction) returns (PaymentRequestReply) {}
}